Addstyles for header

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,3 +86,41 @@ body {
         }
     }
 }
+
+/* Splash */
+
+.splash {
+    background: $color-blue;
+    color: $color-white;
+    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+    .splash-inner {
+        margin: 0;
+        max-width: 70%;
+        
+        .page-title {
+            margin: 0; 
+            font-size: 72px;
+            word-spacing: -24px;
+            font-weight: 700;
+            line-height: 1.2;
+            
+            span {
+                font-style: italic;
+                font-size: 80px;
+                word-spacing: -50px;
+                font-family: $family-font-signika;
+            }
+        }
+        
+        .page-subtitle {
+            margin: 24px 0;
+            font-weight: 400;
+            font-size: 16px;
+        }
+    }
+}
