--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,8 @@ $color-pink: #ff7675;
 $family-font-signika: "Signika", sans-serif;
 $family-font-inconsolata: "Inconsolata", monospace;
 
+$transition: all 2s;
+
 /* Global */
 
 *, *::before, *::after {
@@ -30,6 +32,57 @@ body {
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 5%;
+}
+
+section {
+    padding: 96px 0;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 160px;
+    margin: 24px auto 0 auto;
+    padding: 16px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border: 2px solid;
+    background-position: 100% 0;
+    background-size: 300%;
+    transition: $transition;
+    
+    &:hover {
+        background-position: 0 100%;
+        color: $color-white;
+    }
+}
+
+.btn-one {
+    color: $color-white;
+    border-color: $color-white;
+    background-image: linear-gradient(90deg, $color-white 50%, $color-blue 50%);
+        
+    &:hover {
+        color: $color-blue;
+    }
+}
+
+.section-title {
+    font-size: 48px;
+    margin: 0 0 72px 0;
+}
+
+.article-title {
+    font-size: 24px;
+    margin: 0 0 12px 0;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 /* Navigation */
@@ -121,6 +174,62 @@ body {
             margin: 24px 0;
             font-weight: 400;
             font-size: 16px;
+        }
+    }
+}
+
+/* Services */
+
+.services-article {
+    flex: 0 0 33.333%;
+    position: relative;
+    
+    .article-content {
+        height: 35vh;
+        overflow-y: auto;
+        padding: 10px;
+        
+         p:first-of-type {
+            font-weight: bold;
+        }
+    
+    }
+
+    .article-number {
+        position: absolute;
+        top: -10%;
+        font-size: 144px;
+        line-height: 1;
+        font-family: $family-font-signika;
+        color: $color-blue;
+        opacity: 0.2;
+    }
+    
+    .btn-two {
+        border-color: $color-green;
+        background-image: linear-gradient(90deg, $color-green 50%, $color-white 50%);
+        
+        &:hover {
+            
+            color: $color-white;
+        }
+    }
+    
+    .btn-three {
+        border-color: $color-red;
+        background-image: linear-gradient(90deg, $color-red 50%, $color-white 50%);
+        
+        &:hover {
+            color: $color-white;
+        }
+    }
+    
+    .btn-four {
+        border-color: $color-blue;
+        background-image: linear-gradient(90deg, $color-blue 50%, $color-white 50%);
+        
+        &:hover {
+            color: $color-white;
         }
     }
 }
