--- a/sass/style.scss
+++ b/sass/style.scss
@@ -233,3 +233,70 @@ section {
         }
     }
 }
+
+/* Work */
+
+.work-article {
+    min-height: 300px;
+    flex: 0 0 50%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 96px;
+    
+    .picture {
+        position: relative;
+        height: 100%;
+        width: 250px;
+        
+        &:after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: $color-green;
+            position: absolute;
+            left: 20px;
+            top: 20px;
+            opacity: 0.3;
+            transition: $transition;
+        }
+        
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+        
+        &:hover {
+            
+            &:after {
+                left: 0;
+                top: 0;
+            }
+        }
+    }
+    
+    .picture-description {
+        padding-left: 5%;
+        
+        p {
+            padding: 0;
+        }
+        
+        p:last-of-type {
+            font-weight: bold;   
+        }
+    }
+    
+    .btn-five {
+        border: none;
+        text-align: left;
+        margin: 36px 0;
+        padding: 0;
+        background: inherit;
+        color: $color-green;
+        
+        &:hover {
+            color: $color-blue;
+        }
+    }
+}
