--- a/sass/style.scss
+++ b/sass/style.scss
@@ -300,3 +300,52 @@ section {
         }
     }
 }
+
+/* Contact */
+
+.contact {
+    background: $color-blue;
+    
+    .section-title {
+        color: $color-white;
+    }
+    
+    form {
+        flex: 2 0 0;
+        padding-right: 96px;
+        margin-left: 10%;
+        
+        input, textarea {
+            width: 100%;
+            padding: 15px;
+            background: inherit;
+            border: none;
+            border-bottom: 3px solid $color-white;
+            
+            &::placeholder {
+                color: $color-white;
+            }
+            
+            &:focus {
+                border: 5px solid $color-white;
+            }
+        }
+    }
+    
+    .contact-data {
+        flex: 1 0 0;
+        color: $color-white;
+        
+        h4 {
+            margin-bottom: 2px;
+            padding: 0;
+            font-size: 20px;
+            line-height: 1.0;
+        }
+        
+        p {
+            padding: 0;
+            margin: 0;
+        }
+    }
+}
